--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   </head>
   <body>
     <div id="secao-01" class="secao">
+      <div class="container">
+        <div id=logo>
+            <h1>Jobs<span style="color:#af670a">NET</span></h1>
+        </div>
+
+        <div class="imgEmprego"></div>
+
+        <div class=conteudo>
+            <p class="textoHome">
+                As melhores oportunidade para a sua recolocação é aqui na JobsNET!
+            </p>
+            <span>Crie seu perfil grátis e receba varias propostas.</span>
+        </div>
+      </div>  
       <span class="icone-scroll">
         <span class="scroll-next scroll"></span>
       </span>
