pequenos ajustes style

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <label for="categoriaHabilitacao">Habilitação</label>
                     <select id="categoriasHabilitacao">
                         <option value=" "></option>
-                        <option value="Não">Não</option>
+                        <option value="Não">Nenhuma</option>
                         <option value="A">A</option>
                         <option value="B">B</option>
                         <option value="AB">AB</option>
