--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="secao-01" class="secao">
       <div class="container">
         <div id=logo>
-            <h1>Jobs<span style="color:#af670a">NET</span></h1>
+            <h1>Jobs<span>NET</span></h1>
         </div>
 
         <div id="imagem">
