ajustes alert CEP e CPF

--- a/Front/index.html
+++ b/Front/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="Front/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>.:JobsNET:.</title>
   </head>
   <body onload="AlturaSecao()">
@@ -13,7 +13,7 @@
         </div>
 
         <div id="imagem">
-            <img class="img-emprego" src="Front/img/emp2.png">
+            <img class="img-emprego" src="img/emp2.png">
         </div>
 
         <div class=conteudo>
@@ -128,7 +128,6 @@
                 <fieldset>
                     <label>CPF *</label>
                     <input type="text" maxlength="11" id="cpf_digitado" onChange="validacao()" required>
-                    <span style="display: none;" id="erro">CPF Inválido</span>
                 </fieldset>
                 <fieldset>
                     <label for="veiculo">Possui Veículo</label>
@@ -158,6 +157,6 @@
   </body>
   
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-  <script src= "Front/js/script.js"> </script>
+  <script src= "js/script.js"> </script>
 </html>
 
