recuperando dados da API

--- a/Front/index.html
+++ b/Front/index.html
@@ -31,7 +31,7 @@
  
     <div id="secao-02" class="secao">
     <div id="containerPai">
-        <form id="container" method="get" action=".">
+        <form id="formulario" method="POST" action="/register">
 
             <h2>Preencha o formulário abaixo!</h2>
         
