--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
                     <fieldset>
                         <label for="cargo">Cargo Pretendido*</label>
-                        <input type="text" for="cargo" id="cargo" name="cargo" placeholder="Ex: Desenvolvedor de Software" required>
+                        <input type="text" for="cargo" id="cargo" name="cargo" placeholder="Ex: Desenvolvedor full stack" required>
                     </fieldset>
                 </div>
 
@@ -79,8 +79,7 @@
                 <div class="form-row">
 
                     <fieldset class="cep">
-                        <label for="cep"> CEP*
-                        </label>
+                        <label for="cep"> CEP*</label>
                         <input name="cep" type="text" id="cep" value="" size="10" maxlength="9" placeholder="somente números"
                             onblur="pesquisacep(this.value);">
                     </fieldset>
@@ -110,7 +109,7 @@
 
                     <fieldset class="estado">
                         <label for="complemento" >Complemento</label>
-                        <input type="addres" for="complemento" id="complemento" name="complemento">
+                        <input type="addres" for="complemento" id="complemento" name="complemento" placeholder="Ex: casa 1">
                     </fieldset>
 
                 </div>
